crates/ty_python_semantic/resources/mdtest/snapshots/final.md_-_Tests_for_the_`@typi…_-_Cannot_override_a_me…_(338615109711a91b).snap
---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: final.md - Tests for the `@typing(_extensions).final` decorator - Cannot override a method decorated with `@final`
mdtest path: crates/ty_python_semantic/resources/mdtest/final.md
---

# Python source files

## mdtest_snippet.pyi

```
  1 | from typing_extensions import Any, Callable, TypeVar, final
  2 | 
  3 | # Decorator intentionally erases the wrapped signature.
  4 | def lossy_decorator(fn: Callable[..., Any]) -> Callable[..., Any]: ...
  5 | 
  6 | class Parent:
  7 |     @final
  8 |     def foo(self): ...
  9 |     @final
 10 |     @property
 11 |     def my_property1(self) -> int: ...
 12 |     @property
 13 |     @final
 14 |     def my_property2(self) -> int: ...
 15 |     @property
 16 |     @final
 17 |     def my_property3(self) -> int: ...
 18 |     @final
 19 |     @classmethod
 20 |     def class_method1(cls) -> int: ...
 21 |     @classmethod
 22 |     @final
 23 |     def class_method2(cls) -> int: ...
 24 |     @final
 25 |     @staticmethod
 26 |     def static_method1() -> int: ...
 27 |     @staticmethod
 28 |     @final
 29 |     def static_method2() -> int: ...
 30 |     @lossy_decorator
 31 |     @final
 32 |     def decorated_1(self): ...
 33 |     @final
 34 |     @lossy_decorator
 35 |     def decorated_2(self): ...
 36 | 
 37 | class Child(Parent):
 38 |     # explicitly test the concise diagnostic message,
 39 |     # which is different to the verbose diagnostic summary message:
 40 |     #
 41 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
 42 |     def foo(self): ...
 43 |     @property
 44 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
 45 |     @property
 46 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
 47 |     @my_property2.setter
 48 |     def my_property2(self, x: int) -> None: ...
 49 |     @property
 50 |     def my_property3(self) -> int: ...  # error: [override-of-final-method]
 51 |     @my_property3.deleter
 52 |     def my_property3(self) -> None: ...
 53 |     @classmethod
 54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
 55 |     @staticmethod
 56 |     def static_method1() -> int: ...  # error: [override-of-final-method]
 57 |     @classmethod
 58 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
 59 |     @staticmethod
 60 |     def static_method2() -> int: ...  # error: [override-of-final-method]
 61 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
 62 |     @lossy_decorator
 63 |     def decorated_2(self): ...  # TODO: should emit [override-of-final-method]
 64 | 
 65 | class OtherChild(Parent): ...
 66 | 
 67 | class Grandchild(OtherChild):
 68 |     # TODO: The Liskov violation here maybe shouldn't be emitted? Whether called on the
 69 |     # type or on an instance, it will behave the same from the caller's perspective. The only
 70 |     # difference is whether the method body gets access to `self`, which is not a
 71 |     # concern of Liskov.
 72 |     @staticmethod
 73 |     # error: [override-of-final-method]
 74 |     # error: [invalid-method-override]
 75 |     def foo(): ...
 76 |     @property
 77 |     # TODO: we should emit a Liskov violation here too
 78 |     # error: [override-of-final-method]
 79 |     def my_property1(self) -> str: ...
 80 |     # TODO: we should emit a Liskov violation here too
 81 |     # error: [override-of-final-method]
 82 |     class_method1 = None
 83 | 
 84 | # Diagnostic edge case: `final` is very far away from the method definition in the source code:
 85 | 
 86 | T = TypeVar("T")
 87 | 
 88 | def identity(x: T) -> T: ...
 89 | 
 90 | class Foo:
 91 |     @final
 92 |     @identity
 93 |     @identity
 94 |     @identity
 95 |     @identity
 96 |     @identity
 97 |     @identity
 98 |     @identity
 99 |     @identity
100 |     @identity
101 |     @identity
102 |     @identity
103 |     @identity
104 |     @identity
105 |     @identity
106 |     @identity
107 |     @identity
108 |     @identity
109 |     @identity
110 |     def bar(self): ...
111 | 
112 | class Baz(Foo):
113 |     def bar(self): ...  # error: [override-of-final-method]
```

# Diagnostics

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:42:9
   |
42 |     def foo(self): ...
   |         ^^^ Overrides a definition from superclass `Parent`
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:7:5
  |
7 |     @final
  |     ------
8 |     def foo(self): ...
  |         --- `Parent.foo` defined here
help: Remove the override of `foo`
   |
41 |     # error: [override-of-final-method] "Cannot override final member `foo` from superclass `Parent`"
   -     def foo(self): ...
42 +     
43 |     @property
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:44:9
   |
44 |     def my_property1(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:9:5
   |
 9 |     @final
   |     ------
10 |     @property
11 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
help: Remove the override of `my_property1`

```

```
error[override-of-final-method]: Cannot override `Parent.my_property2`
  --> src/mdtest_snippet.pyi:46:9
   |
46 |     def my_property2(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.my_property2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:13:5
   |
13 |     @final
   |     ------
14 |     def my_property2(self) -> int: ...
   |         ------------ `Parent.my_property2` defined here
help: Remove the getter and setter for `my_property2`

```

```
error[override-of-final-method]: Cannot override `Parent.my_property3`
  --> src/mdtest_snippet.pyi:50:9
   |
50 |     def my_property3(self) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.my_property3` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:16:5
   |
16 |     @final
   |     ------
17 |     def my_property3(self) -> int: ...
   |         ------------ `Parent.my_property3` defined here
help: Remove the override of `my_property3`

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:54:9
   |
54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:18:5
   |
18 |     @final
   |     ------
19 |     @classmethod
20 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
help: Remove the override of `class_method1`
   |
52 |     def my_property3(self) -> None: ...
   -     @classmethod
   -     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
53 +       # error: [override-of-final-method]
54 |     @staticmethod
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method1`
  --> src/mdtest_snippet.pyi:56:9
   |
56 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.static_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:24:5
   |
24 |     @final
   |     ------
25 |     @staticmethod
26 |     def static_method1() -> int: ...
   |         -------------- `Parent.static_method1` defined here
help: Remove the override of `static_method1`
   |
54 |     def class_method1(cls) -> int: ...  # error: [override-of-final-method]
   -     @staticmethod
   -     def static_method1() -> int: ...  # error: [override-of-final-method]
55 +       # error: [override-of-final-method]
56 |     @classmethod
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.class_method2`
  --> src/mdtest_snippet.pyi:58:9
   |
58 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.class_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:22:5
   |
22 |     @final
   |     ------
23 |     def class_method2(cls) -> int: ...
   |         ------------- `Parent.class_method2` defined here
help: Remove the override of `class_method2`
   |
56 |     def static_method1() -> int: ...  # error: [override-of-final-method]
   -     @classmethod
   -     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
57 +       # error: [override-of-final-method]
58 |     @staticmethod
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.static_method2`
  --> src/mdtest_snippet.pyi:60:9
   |
60 |     def static_method2() -> int: ...  # error: [override-of-final-method]
   |         ^^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.static_method2` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:28:5
   |
28 |     @final
   |     ------
29 |     def static_method2() -> int: ...
   |         -------------- `Parent.static_method2` defined here
help: Remove the override of `static_method2`
   |
58 |     def class_method2(cls) -> int: ...  # error: [override-of-final-method]
   -     @staticmethod
   -     def static_method2() -> int: ...  # error: [override-of-final-method]
59 +       # error: [override-of-final-method]
60 |     def decorated_1(self): ...  # TODO: should emit [override-of-final-method]
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[invalid-method-override]: Invalid override of method `foo`
  --> src/mdtest_snippet.pyi:75:9
   |
75 |     def foo(): ...
   |         ^^^^^ Definition is incompatible with `Parent.foo`
   |
  ::: src/mdtest_snippet.pyi:8:9
   |
 8 |     def foo(self): ...
   |         --------- `Parent.foo` defined here
info: `Grandchild.foo` is a staticmethod but `Parent.foo` is an instance method
info: This violates the Liskov Substitution Principle

```

```
error[override-of-final-method]: Cannot override `Parent.foo`
  --> src/mdtest_snippet.pyi:75:9
   |
75 |     def foo(): ...
   |         ^^^ Overrides a definition from superclass `Parent`
info: `Parent.foo` is decorated with `@final`, forbidding overrides
 --> src/mdtest_snippet.pyi:7:5
  |
7 |     @final
  |     ------
8 |     def foo(self): ...
  |         --- `Parent.foo` defined here
help: Remove the override of `foo`
   |
71 |     # concern of Liskov.
   -     @staticmethod
   -     # error: [override-of-final-method]
   -     # error: [invalid-method-override]
   -     def foo(): ...
72 +     
73 |     @property
   |
note: This is an unsafe fix and may change runtime behavior

```

```
error[override-of-final-method]: Cannot override `Parent.my_property1`
  --> src/mdtest_snippet.pyi:79:9
   |
79 |     def my_property1(self) -> str: ...
   |         ^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.my_property1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:9:5
   |
 9 |     @final
   |     ------
10 |     @property
11 |     def my_property1(self) -> int: ...
   |         ------------ `Parent.my_property1` defined here
help: Remove the override of `my_property1`

```

```
error[override-of-final-method]: Cannot override `Parent.class_method1`
  --> src/mdtest_snippet.pyi:82:5
   |
82 |     class_method1 = None
   |     ^^^^^^^^^^^^^ Overrides a definition from superclass `Parent`
info: `Parent.class_method1` is decorated with `@final`, forbidding overrides
  --> src/mdtest_snippet.pyi:18:5
   |
18 |     @final
   |     ------
19 |     @classmethod
20 |     def class_method1(cls) -> int: ...
   |         ------------- `Parent.class_method1` defined here
help: Remove the override of `class_method1`

```

```
error[override-of-final-method]: Cannot override `Foo.bar`
   --> src/mdtest_snippet.pyi:113:9
    |
113 |     def bar(self): ...  # error: [override-of-final-method]
    |         ^^^ Overrides a definition from superclass `Foo`
info: `Foo.bar` is decorated with `@final`, forbidding overrides
   --> src/mdtest_snippet.pyi:91:5
    |
 91 |     @final
    |     ------
    |
   ::: src/mdtest_snippet.pyi:110:9
    |
110 |     def bar(self): ...
    |         --- `Foo.bar` defined here
help: Remove the override of `bar`
    |
112 | class Baz(Foo):
    -     def bar(self): ...  # error: [override-of-final-method]
113 +     pass  # error: [override-of-final-method]
    |
note: This is an unsafe fix and may change runtime behavior

```
